# sle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/map-files/: default.slemap
cmake/: config.cmake
docs/: ecs.md
docs/diagrams/: Class Diagram.puml  ECS.puml
src/: AssetLoader.cpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  Constants.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  EventHandler.cpp  EventHandler.hpp  GameData.cpp  GameData.hpp  Map.cpp  Map.hpp  MapSerializer.cpp  MapSerializer.hpp  Renderer.cpp  Renderer.hpp  Texture.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp  Window.cpp  Window.hpp  core.hpp  main.cpp  math.hpp  utils.hpp
src/assets/: AssetManager.cpp  AssetManager.hpp
src/core/: Engine.cpp  Engine.hpp  EventHandler.cpp  EventHandler.hpp
src/ecs/: ComponentManager.cpp  ComponentManager.hpp  ECS.cpp  ECS.h  Entity.hpp  EntityManager.cpp  EntityManager.hpp  IComponentList.hpp  Scene.cpp  Scene.hpp  SystemManager.cpp  SystemManager.hpp  ecs.hpp  ecs.md
src/ecs/components/: ComponentID.hpp  IComponent.hpp  PositionComponent.hpp  TextureComponent.hpp  TransformComponent.hpp
src/ecs/systems/: ISystem.h  ISystem.hpp  RenderSystem.hpp
src/game/: Camera.cpp  Camera.hpp  GameData.cpp  GameData.hpp  GameStateMachine.cpp  GameStateMachine.hpp  MapEditor.cpp  MapEditor.hpp  MapEditorState.cpp  MapEditorState.hpp  PlayState.cpp  PlayState.hpp
src/graphics/: Texture.hpp  Window.hpp
src/map/: MapSerializer.cpp  MapSerializer.hpp  TileMap.cpp  TileMap.hpp
src/util/: assert.hpp  constants.hpp  files.hpp  math.hpp  types.hpp
